--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,14 +52,18 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Script\CameraFocus.cs" />
+     <Compile Include="Assets\Script\Const.cs" />
      <Compile Include="Assets\Script\Death\Death.cs" />
      <Compile Include="Assets\Script\Enemy\EnemyAttack.cs" />
      <Compile Include="Assets\Script\Enemy\EnemyMove.cs" />
      <Compile Include="Assets\Script\GameController.cs" />
      <Compile Include="Assets\Script\MicrophoneInput.cs" />
+     <Compile Include="Assets\Script\Player\OutOfGamePlace.cs" />
      <Compile Include="Assets\Script\Player\PlayController.cs" />
      <Compile Include="Assets\Script\UI\GameEndUI.cs" />
+     <Compile Include="Assets\Script\UI\OpenGameUI.cs" />
      <Compile Include="Assets\Script\UI\ReplayGame.cs" />
+     <Compile Include="Assets\Script\WinFlag\WinFlag.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>E:/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
